Additions:

Changes:
/pay can now be used to pay offline players
Updated to Fireplace Lib 5.2+

Fixes/Internal Changes:
Fixed /pay looking at wrong account for amount that can be paid.